--- a/dsjm tracing.ipynb
+++ b/dsjm tracing.ipynb
@@ -614,6 +614,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g++ -DPACKAGE_NAME=\\\"\\\" -DPACKAGE_TARNAME=\\\"\\\" -DPACKAGE_VERSION=\\\"\\\" -DPACKAGE_STRING=\\\"\\\" -DPACKAGE_BUGREPORT=\\\"\\\" -DPACKAGE=\\\"dsjm\\\" -DVERSION=\\\"0.2\\\" -I. -I../src    -g -O2 -MT ForwardDifference-Matrix.o -MD -MP -MF .deps/ForwardDifference-Matrix.Tpo -c -o ForwardDifference-Matrix.o `test -f '../src/Matrix.cpp' || echo './'`../src/Matrix.cpp\n",
+      "mv -f .deps/ForwardDifference-Matrix.Tpo .deps/ForwardDifference-Matrix.Po\n",
+      "g++  -g -O2   -o ForwardDifference ForwardDifference-ForwardDifference.o ForwardDifference-StructuredJacobian.o ForwardDifference-mmio.o ForwardDifference-Matrix.o ForwardDifference-CLI.o ForwardDifference-Utility.o ForwardDifference-Timer.o ForwardDifference-IMatrix.o ForwardDifference-Configuration.o ForwardDifference-IRowColumnDS.o  \n",
+      "g++ -DPACKAGE_NAME=\\\"\\\" -DPACKAGE_TARNAME=\\\"\\\" -DPACKAGE_VERSION=\\\"\\\" -DPACKAGE_STRING=\\\"\\\" -DPACKAGE_BUGREPORT=\\\"\\\" -DPACKAGE=\\\"dsjm\\\" -DVERSION=\\\"0.2\\\" -I. -I../src    -g -O2 -MT gcolor-Matrix.o -MD -MP -MF .deps/gcolor-Matrix.Tpo -c -o gcolor-Matrix.o `test -f '../src/Matrix.cpp' || echo './'`../src/Matrix.cpp\n",
+      "mv -f .deps/gcolor-Matrix.Tpo .deps/gcolor-Matrix.Po\n",
+      "g++  -g -O2   -o gcolor gcolor-gcolor.o gcolor-driver.o gcolor-mmio.o gcolor-Matrix.o gcolor-CLI.o gcolor-Utility.o gcolor-Timer.o gcolor-IMatrix.o gcolor-Configuration.o gcolor-IRowColumnDS.o  \n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "make"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "complete.mtx,\n",
+      "#Trace ndeg  sum : 21\n",
+      "#Trace stepCount :21\n",
+      "7,7,49,RLF,0,0,7\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "./gcolor -i complete.mtx -m rlf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
